<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MillerWidget</class>
 <widget class="QWidget" name="MillerWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>331</width>
    <height>155</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="1" column="0">
    <widget class="QLabel" name="idxLabel">
     <property name="text">
      <string>Index:</string>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="offLabel">
     <property name="text">
      <string>Offset:</string>
     </property>
    </widget>
   </item>
   <item row="0" column="1" rowspan="3">
    <spacer name="horizontalSpacer">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>32</width>
       <height>66</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="0" column="2">
    <widget class="QLabel" name="hLabel">
     <property name="text">
      <string>h:</string>
     </property>
     <property name="buddy">
      <cstring>hSel</cstring>
     </property>
    </widget>
   </item>
   <item row="0" column="3">
    <widget class="QLabel" name="kLabel">
     <property name="text">
      <string>&amp;k:</string>
     </property>
     <property name="buddy">
      <cstring>kSel</cstring>
     </property>
    </widget>
   </item>
   <item row="0" column="4">
    <widget class="QLabel" name="lLabel">
     <property name="text">
      <string>&amp;l:</string>
     </property>
     <property name="buddy">
      <cstring>lSel</cstring>
     </property>
    </widget>
   </item>
   <item row="1" column="2">
    <widget class="QSpinBox" name="hSel">
     <property name="minimum">
      <number>-99</number>
     </property>
    </widget>
   </item>
   <item row="1" column="3">
    <widget class="QSpinBox" name="kSel">
     <property name="minimum">
      <number>-99</number>
     </property>
    </widget>
   </item>
   <item row="1" column="4">
    <widget class="QSpinBox" name="lSel">
     <property name="minimum">
      <number>-99</number>
     </property>
    </widget>
   </item>
   <item row="2" column="2">
    <widget class="QDoubleSpinBox" name="xOff">
     <property name="minimum">
      <double>-99.989999999999995</double>
     </property>
    </widget>
   </item>
   <item row="2" column="3">
    <widget class="QDoubleSpinBox" name="yOff">
     <property name="minimum">
      <double>-99.989999999999995</double>
     </property>
    </widget>
   </item>
   <item row="2" column="4">
    <widget class="QDoubleSpinBox" name="zOff">
     <property name="minimum">
      <double>-99.989999999999995</double>
     </property>
    </widget>
   </item>
   <item row="3" column="0" colspan="5">
    <widget class="QPushButton" name="pushButton">
     <property name="text">
      <string>Show/Hide</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="4" column="0" colspan="5">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>hSel</sender>
   <signal>valueChanged(int)</signal>
   <receiver>MillerWidget</receiver>
   <slot>updateIndex(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>202</x>
     <y>40</y>
    </hint>
    <hint type="destinationlabel">
     <x>100</x>
     <y>11</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>kSel</sender>
   <signal>valueChanged(int)</signal>
   <receiver>MillerWidget</receiver>
   <slot>updateIndex(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>276</x>
     <y>45</y>
    </hint>
    <hint type="destinationlabel">
     <x>127</x>
     <y>7</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>lSel</sender>
   <signal>valueChanged(int)</signal>
   <receiver>MillerWidget</receiver>
   <slot>updateIndex(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>340</x>
     <y>45</y>
    </hint>
    <hint type="destinationlabel">
     <x>145</x>
     <y>20</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>xOff</sender>
   <signal>valueChanged(double)</signal>
   <receiver>MillerWidget</receiver>
   <slot>updateOffset(double)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>230</x>
     <y>76</y>
    </hint>
    <hint type="destinationlabel">
     <x>75</x>
     <y>51</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>yOff</sender>
   <signal>valueChanged(double)</signal>
   <receiver>MillerWidget</receiver>
   <slot>updateOffset(double)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>262</x>
     <y>68</y>
    </hint>
    <hint type="destinationlabel">
     <x>237</x>
     <y>51</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>zOff</sender>
   <signal>valueChanged(double)</signal>
   <receiver>MillerWidget</receiver>
   <slot>updateOffset(double)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>391</x>
     <y>76</y>
    </hint>
    <hint type="destinationlabel">
     <x>325</x>
     <y>61</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>updateIndex(int)</slot>
  <slot>updateOffset(double)</slot>
  <slot>toggleView()</slot>
 </slots>
</ui>
